--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/calculator.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/tooltip.css' | relative_url }}" />
+    {%- if page.styles -%}
+      {%- for style in page.styles -%}
+    <link rel="stylesheet" href="{{ style | relative_url }}" />
+      {%- endfor -%}
+    {%- endif -%}
     <link rel="icon" type="image/x-icon" href="{{ '/assets/images/base/favicon.ico' | relative_url }}" />
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit" defer></script>
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
