added to header

--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -43,6 +43,9 @@
             <li>  
               <a href="{{ '/calculator/' | relative_url }}" class="nav-link">AI Scribe Calculator</a>
             </li>
+            <li>  
+              <a href="{{ '/beta-apps/' | relative_url }}" class="nav-link">Beta Apps</a>
+            </li>
           </ul>
         </li>
         <li class="dropdown">
