--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,16 +17,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit" defer></script>
 
-    <!-- Page Styles -->
+    <!-- Main Styles -->
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
-    <link rel="stylesheet" href="{{ '/assets/css/calculator.css' | relative_url }}" />
-    <link rel="stylesheet" href="{{ '/assets/css/provisional-psychologists.css' | relative_url }}" />
-        <link rel="stylesheet" href="{{ '/assets/css/tooltip.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/booking-modal.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/cards.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/page-header.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/tooltip.css' | relative_url }}" />
+
+    <!-- Media Queries -->
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/max-width-480.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/max-width-1600.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/min-width-768.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/min-width-1024.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/print.css' | relative_url }}" />
+
+    <!-- Page Styles -->
+    <link rel="stylesheet" href="{{ '/assets/css/page-styles/beta-apps.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/page-styles/calculator.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/page-styles/landing-page.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/page-styles/provisional-psychologists.css' | relative_url }}" />
 
     <!-- Page Scripts -->
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
