--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,9 @@
     <!-- Page Styles -->
     <link rel="stylesheet" href="{{ '/assets/css/page-styles/beta-apps.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/page-styles/calculator.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/page-styles/comparisons.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/page-styles/standards.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/page-styles/compliance.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/page-styles/landing-page.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/page-styles/provisional-psychologists.css' | relative_url }}" />
 
