--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/booking-modal.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/cards.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/nav.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/page-header.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/tooltip.css' | relative_url }}" />
 
@@ -46,7 +47,7 @@
 
   </head>
   <body>
-    {% include header-nav.html %}
+    {% include nav-bar.html %}
     <!-- {% if page.subnav %} {% include sub-nav.html %} {% endif %} -->
 
     <main id="main" role="main">
