--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -286,6 +286,9 @@ a:focus {
 .gap-2 {
   gap: 2rem;
 }
+.gap-4 {
+  gap: 4rem;
+}
 
 .m-0 {
   margin: 0;
@@ -307,6 +310,9 @@ a:focus {
 }
 .mb-6 {
   margin-bottom: 6rem;
+}
+.mt-0 {
+  margin-top: 0;
 }
 .mt-025 {
   margin-top: 0.25rem;
