contact and prov psych

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
     <!-- Media Queries -->
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/max-width-480.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/max-width-1600.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/media-queries/max-width-768.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/min-width-768.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/min-width-1024.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/media-queries/print.css' | relative_url }}" />
