--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -229,6 +229,7 @@ a:focus {
   border-top: 1px solid var(--border-color);
   padding: 2.5rem 0;
   text-align: center;
+  margin-top: 4rem;
 }
 
 .copyright {
