--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
 
     <!-- Main Styles -->
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/banner.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/booking-modal.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/cards.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/assets/css/nav.css' | relative_url }}" />
@@ -49,6 +50,7 @@
   </head>
   <body>
     {% include nav-bar.html %}
+    {% include banner.html %}
     <!-- {% if page.subnav %} {% include sub-nav.html %} {% endif %} -->
 
     <main id="main" role="main">
