--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
     <!-- Page Scripts -->
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/calculator.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/banner.js' | relative_url }}"></script>
 
   </head>
   <body>
