--- a/assets/css/media-queries/max-width-768.css
+++ b/assets/css/media-queries/max-width-768.css
@@ -30,10 +30,10 @@
 
   .nav-container > a[aria-label*="home"] img {
     width: 100px;
+    min-width: 40px;
   }
 
   .comparison-nav-margin {
-    margin-right: 0;
     font-size: var(--font-sm);
     padding: 0.5rem 0.75rem;
   }
@@ -130,5 +130,20 @@
 
   .nav:not([hidden]) {
     display: flex;
+  }
+
+  .banner-container {
+    width: 90%;
+  }
+
+  .banner {
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 12px 20px;
+  }
+
+  .banner-text {
+    white-space: normal;
+    text-align: center;
   }
 }
